Fix #43. white-space: nowrap to prevent button text from breaking to next line.

--- a/less/bootstrap-select.less
+++ b/less/bootstrap-select.less
@@ -22,6 +22,7 @@ select.selectpicker {
     z-index: 1;
     // necessary for proper positioning of caret in Bootstrap 4 (pushes caret to the right)
     text-align: right;
+    white-space: nowrap;
 
     &.bs-placeholder,
     &.bs-placeholder:hover,
