--- a/sass/bootstrap-select.scss
+++ b/sass/bootstrap-select.scss
@@ -40,6 +40,7 @@ select.selectpicker {
     z-index: 1;
     // necessary for proper positioning of caret in Bootstrap 4 (pushes caret to the right)
     text-align: right;
+    white-space: nowrap;
 
     &.bs-placeholder,
     &.bs-placeholder:hover,
